<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToDoActivityFragment"
    tools:showIn="@layout/activity_to_do">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/title_string"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/todo_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_tv"
        android:layout_marginLeft="@dimen/size_5dp"
        android:layout_marginRight="@dimen/size_5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/item_name"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:hint="@string/name_string">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/due_date_tv"
                android:layout_width="@dimen/size_10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/date_string"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description_string"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/additional_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/additional_string"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_string" />

    </LinearLayout>

    <ListView
        android:id="@+id/items_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/todo_menu_layout"
        android:layout_centerHorizontal="true">
    </ListView>

</RelativeLayout>