<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemCell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/row_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_2dp"
            android:layout_marginLeft="@dimen/size_15dp"
            android:layout_marginTop="@dimen/size_2dp"
            android:text="@string/name_string" />

        <TextView
            android:id="@+id/row_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_10dp"
            android:layout_marginLeft="@dimen/size_15dp"
            android:text="@string/description_string"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

    <TextView
        android:id="@+id/row_date_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:paddingEnd="@dimen/size_15dp"
        android:paddingTop="@dimen/size_5dp"
        android:text="@string/date_string"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

</LinearLayout>